--- a/RequestTravelPlanWebBFF/pom.xml
+++ b/RequestTravelPlanWebBFF/pom.xml
@@ -25,11 +25,19 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		
-	<!--	<dependency>
+	<dependency>
       <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-data-mongodb</artifactId> 
-    </dependency>-->
-	
+    </dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20190722</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -46,16 +54,6 @@
     <artifactId>springfox-swagger-ui</artifactId>
     <version>2.8.0</version>
 </dependency>
-
-		
-		
-		<!--  <dependency>
-  <groupId>com.amadeus</groupId>
-  <artifactId>amadeus-java</artifactId>
-  <version>4.0.0</version>
-</dependency>-->
-
-
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
