--- a/RequestTravelPlanWebBFF/src/main/resources/application.properties
+++ b/RequestTravelPlanWebBFF/src/main/resources/application.properties
@@ -1,6 +1,33 @@
 server.port=8891
-Amadeus.Client.ID=s9GkJTVGvl4NY3X2GLAINF1LYO8Ecio2
-Amadeus.Client.Secret=hgj4wcAsAa4SXuAO
-#spring.data.mongodb.database=containercrushdb
+Amadeus.Client.ID=gfsSwZTRRRno4VwQjNgZQTDe66WLWG2d
+Amadeus.Client.Secret=2s66OIgzR7olMG4T
+#spring.data.mongodb.database=traveldb
 #spring.data.mongodb.port=27017
-#spring.data.mongodb.uri: mongodb://userD4N:C3fmQWoRJXJaPpF0@mongodb:27017/traveldb
+#spring.data.mongodb.uri=mongodb://userD4N:C3fmQWoRJXJaPpF0@mongodb:27017/traveldb
+spring.data.mongodb.uri= mongodb://userD4N:C3fmQWoRJXJaPpF0@172.21.253.239:27017/traveldb
+
+
+# Message Queue specific configs for attractionService
+attractionService.exchange.name=attractionService-exchange
+attractionService.queue.name=attractionService-queue
+attractionService.routing.key=attractionService-routing-key
+
+# Message Queue specific configs for flightService
+flightService.exchange.name=flightService-exchange
+flightService.queue.name=flightService-queue
+flightService.routing.key=flightService-routing-key
+
+# Message Queue specific configs for hotelService
+hotelService.exchange.name=hotelService-exchange
+hotelService.queue.name=hotelService-queue
+hotelService.routing.key=hotelService-routing-key
+
+#AMQP RabbitMQ configuration 
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+# Additional RabbitMQ properties
+spring.rabbitmq.listener.simple.concurrency=4
+spring.rabbitmq.listener.simple.max-concurrency=8
+spring.rabbitmq.listener.simple.retry.initial-interval=5000
